--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar">
       <a href="#" class="navbar-logo">Veinreiss<span>store</span>.</a>
       <div class="navbar-nav">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Produk</a>
         <a href="#contact">Kontak</a>
@@ -35,6 +35,19 @@
     </nav>
 
     <!-- Navbar End -->
+
+    <!-- Hero section start -->
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Nikmati promo <span>sepatu</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="#" class="cta">Beli sekarang</a>
+      </main>
+    </section>
+
+    <!-- Hero section end -->
+
+
 
     <!-- Feather Icons -->
     <script>
